--- a/styles.css
+++ b/styles.css
@@ -46,11 +46,12 @@ h2 {
 .message {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
   margin: auto;
   height: 80%;
   width: 70%;
-  text-align: center;
+  /* text-align: center; */
   padding: 5%;
 }
 
@@ -114,7 +115,7 @@ form {
   align-content: center;
 }
 
-@media (max-width: 768px){
+@media (max-width: 767px) {
   form {
     display: flex;
     flex-direction: row;
@@ -122,5 +123,11 @@ form {
     align-content: center;
     padding: 2% 10%;
     justify-content: flex-start;
+  }
+}
+
+@media (max-width: 500px) {
+  .selection {
+    width: 60%
   }
 }
